--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,20 @@ services:
     image: nats:latest
     ports:
       - 4222:4222
+      - 6222:6222
+      - 8222:8222
+    networks:
+      - nats-redis-mongo-network
+
+  rabbitmq-server:
+    container_name: rabbitmq-server
+    image: rabbitmq:management
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     networks:
       - nats-redis-mongo-network
 
